# stopwatch

./: .gitignore  CMakeLists.txt  README.md
cmake/: stopwatchConfig.cmake.in
include/stopwatch/: stopwatch.h  stopwatch_base.h  stopwatch_std.h
tests/: dummy.cpp
